kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: "documenso-public-ip"
spec:
  rules:
  - http:
      paths:
      - path: "/*"
        backend:
          serviceName: app-service
          servicePort: 80
